--- a/spring-android-auth-test/pom.xml
+++ b/spring-android-auth-test/pom.xml
@@ -1,104 +1,53 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<groupId>org.springframework.android</groupId>
 	<artifactId>spring-android-auth-test</artifactId>
 	<version>1.0.0.BUILD-SNAPSHOT</version>
 	<packaging>apk</packaging>
 	<name>spring-android-auth-test</name>
-	<url>http://www.springsource.org</url> 
+	<url>http://www.springsource.org</url>
 	<organization>
 		<name>SpringSource</name>
 		<url>http://www.springsource.org</url>
 	</organization>
 
-	<properties> 
-		<android-platform>3</android-platform>
-		<android-emulator>10</android-emulator>
+	<properties>
+		<android-platform>7</android-platform>
+		<android-emulator>7</android-emulator>
 		<maven-android-plugin-version>2.8.4</maven-android-plugin-version>
 		<maven-compiler-plugin-version>2.3.2</maven-compiler-plugin-version>
-		<android-version>1.5_r3</android-version>
-		<spring-android-version>1.0.0.BUILD-SNAPSHOT</spring-android-version>
-		<spring-social-version>1.0.0.BUILD-SNAPSHOT</spring-social-version>
 		<java-version>1.6</java-version>
+		<com.google.android.version>2.1_r1</com.google.android.version>
+		<!-- Available Android versions: 1.5_r3, 1.5_r4, 1.6_r2, 2.1.2, 2.1_r1, 2.2.1, 2.3.1, 2.3.3 -->
+		<org.springframework.android.version>1.0.0.BUILD-SNAPSHOT</org.springframework.android.version>
+		<org.springframework.social.version>1.0.0.BUILD-SNAPSHOT</org.springframework.social.version>
+		<org.springframework.security.version>3.1.0.RC2.crypto</org.springframework.security.version>
 	</properties>
-
-	<build>
-		<sourceDirectory>src</sourceDirectory>
-		<finalName>${project.artifactId}</finalName>
-		<plugins>
-			<plugin>
-				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
-				<artifactId>maven-android-plugin</artifactId>
-				<version>${maven-android-plugin-version}</version>
-				<configuration>
-					<sdk>
-						<platform>${android-platform}</platform>
-					</sdk>
-					<!-- <emulator>
-						<avd>${android-emulator}</avd>
-						<wait>60000</wait>
-					</emulator> -->
-					<deleteConflictingFiles>true</deleteConflictingFiles>
-					<undeployBeforeDeploy>true</undeployBeforeDeploy>
-				</configuration>
-<!-- 				<executions>
-					<execution>
-						<id>startemulator</id>
-						<phase>initialize</phase>
-						<goals>
-							<goal>emulator-start</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>stopemulator</id>
-						<phase>install</phase>
-						<goals>
-							<goal>emulator-stop</goal>
-						</goals>
-					</execution>
-				</executions> -->
-				<extensions>true</extensions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven-compiler-plugin-version}</version>
-				<configuration>
-					<source>${java-version}</source>
-					<target>${java-version}</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.8</version>
-			</plugin>
-		</plugins>
-	</build>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.google.android</groupId>
 			<artifactId>android</artifactId>
-			<version>${android-version}</version>
+			<version>${com.google.android.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-		      <groupId>com.google.android</groupId>
-		      <artifactId>android-test</artifactId>
-		      <version>${android-version}</version>
-		      <scope>provided</scope>
+			<groupId>com.google.android</groupId>
+			<artifactId>android-test</artifactId>
+			<version>${com.google.android.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.android</groupId>
 			<artifactId>spring-android-auth</artifactId>
-			<version>${spring-android-version}</version>
+			<version>${org.springframework.android.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-core</artifactId>
-			<version>${spring-social-version}</version>
+			<version>${org.springframework.social.version}</version>
 			<exclusions>
 				<exclusion>
 					<!-- exclude in favor of spring-android-rest-template -->
@@ -115,7 +64,7 @@
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-test</artifactId>
-			<version>${spring-social-version}</version>
+			<version>${org.springframework.social.version}</version>
 			<exclusions>
 				<exclusion>
 					<!-- exclude in favor of spring-android-rest-template -->
@@ -132,7 +81,7 @@
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-twitter</artifactId>
-			<version>${spring-social-version}</version>
+			<version>${org.springframework.social.version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>spring-social-web</artifactId>
@@ -153,7 +102,7 @@
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-facebook</artifactId>
-			<version>${spring-social-version}</version>
+			<version>${org.springframework.social.version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>spring-social-web</artifactId>
@@ -178,7 +127,7 @@
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-linkedin</artifactId>
-			<version>${spring-social-version}</version>
+			<version>${org.springframework.social.version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>spring-social-web</artifactId>
@@ -203,7 +152,7 @@
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-gowalla</artifactId>
-			<version>${spring-social-version}</version>
+			<version>${org.springframework.social.version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>spring-social-web</artifactId>
@@ -228,7 +177,7 @@
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-github</artifactId>
-			<version>${spring-social-version}</version>
+			<version>${org.springframework.social.version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>spring-social-web</artifactId>
@@ -252,22 +201,66 @@
 		</dependency>
 	</dependencies>
 
+	<build>
+		<sourceDirectory>src</sourceDirectory>
+		<finalName>${project.artifactId}</finalName>
+		<plugins>
+			<plugin>
+				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
+				<artifactId>maven-android-plugin</artifactId>
+				<version>${maven-android-plugin-version}</version>
+				<configuration>
+					<sdk>
+						<platform>${android-platform}</platform>
+					</sdk>
+					<!-- <emulator> <avd>${android-emulator}</avd> <wait>60000</wait> </emulator> -->
+					<deleteConflictingFiles>true</deleteConflictingFiles>
+					<undeployBeforeDeploy>true</undeployBeforeDeploy>
+				</configuration>
+				<!-- <executions> <execution> <id>startemulator</id> <phase>initialize</phase> 
+					<goals> <goal>emulator-start</goal> </goals> </execution> <execution> <id>stopemulator</id> 
+					<phase>install</phase> <goals> <goal>emulator-stop</goal> </goals> </execution> 
+					</executions> -->
+				<extensions>true</extensions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler-plugin-version}</version>
+				<configuration>
+					<source>${java-version}</source>
+					<target>${java-version}</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>2.8</version>
+			</plugin>
+		</plugins>
+	</build>
+
 	<repositories>
 		<!-- For testing against latest Spring snapshots -->
 		<repository>
 			<id>org.springframework.maven.snapshot</id>
 			<name>Spring Maven Snapshot Repository</name>
 			<url>http://maven.springframework.org/snapshot</url>
-			<releases><enabled>false</enabled></releases>
-			<snapshots><enabled>true</enabled></snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
 		</repository>
 		<!-- For developing against latest Spring milestones -->
 		<repository>
 			<id>org.springframework.maven.milestone</id>
 			<name>Spring Maven Milestone Repository</name>
 			<url>http://maven.springframework.org/milestone</url>
-			<snapshots><enabled>false</enabled></snapshots>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
 		</repository>
 	</repositories>
-	
+
 </project>
