--- a/spring-android-auth-test/pom.xml
+++ b/spring-android-auth-test/pom.xml
@@ -14,16 +14,16 @@
 	</organization>
 
 	<properties>
-		<android-platform>7</android-platform>
-		<android-emulator>7</android-emulator>
+		<android-platform>3</android-platform>
+		<android-emulator>3</android-emulator>
 		<maven-android-plugin-version>2.8.4</maven-android-plugin-version>
 		<maven-compiler-plugin-version>2.3.2</maven-compiler-plugin-version>
+		<maven-eclipse-plugin-version>2.8</maven-eclipse-plugin-version>
 		<java-version>1.6</java-version>
-		<com.google.android.version>2.1_r1</com.google.android.version>
+		<com.google.android.version>1.5_r4</com.google.android.version>
 		<!-- Available Android versions: 1.5_r3, 1.5_r4, 1.6_r2, 2.1.2, 2.1_r1, 2.2.1, 2.3.1, 2.3.3 -->
 		<org.springframework.android.version>1.0.0.BUILD-SNAPSHOT</org.springframework.android.version>
 		<org.springframework.social.version>1.0.0.BUILD-SNAPSHOT</org.springframework.social.version>
-		<org.springframework.security.version>3.1.0.RC2.crypto</org.springframework.security.version>
 	</properties>
 
 	<dependencies>
@@ -234,7 +234,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.8</version>
+				<version>${maven-eclipse-plugin-version}</version>
 			</plugin>
 		</plugins>
 	</build>
