--- a/spring-android-auth-test/pom.xml
+++ b/spring-android-auth-test/pom.xml
@@ -14,16 +14,19 @@
 	</organization>
 
 	<properties>
-		<android-platform>3</android-platform>
-		<android-emulator>3</android-emulator>
+		<android-platform>7</android-platform>
+		<android-emulator>7</android-emulator>
 		<maven-android-plugin-version>2.8.4</maven-android-plugin-version>
 		<maven-compiler-plugin-version>2.3.2</maven-compiler-plugin-version>
 		<maven-eclipse-plugin-version>2.8</maven-eclipse-plugin-version>
 		<java-version>1.6</java-version>
-		<com.google.android.version>1.5_r4</com.google.android.version>
+		<com.google.android.version>2.1_r1</com.google.android.version>
 		<!-- Available Android versions: 1.5_r3, 1.5_r4, 1.6_r2, 2.1.2, 2.1_r1, 2.2.1, 2.3.1, 2.3.3 -->
 		<org.springframework.android.version>1.0.0.BUILD-SNAPSHOT</org.springframework.android.version>
-		<org.springframework.social.version>1.0.0.BUILD-SNAPSHOT</org.springframework.social.version>
+		<org.springframework.social.version>1.0.0.RC1</org.springframework.social.version>
+		<org.springframework.social.linkedin.version>1.0.0.BUILD-SNAPSHOT</org.springframework.social.linkedin.version>
+		<org.springframework.social.gowalla.version>1.0.0.BUILD-SNAPSHOT</org.springframework.social.gowalla.version>
+		<org.springframework.social.github.version>1.0.0.BUILD-SNAPSHOT</org.springframework.social.github.version>
 	</properties>
 
 	<dependencies>
@@ -127,7 +130,7 @@
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-linkedin</artifactId>
-			<version>${org.springframework.social.version}</version>
+			<version>${org.springframework.social.linkedin.version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>spring-social-web</artifactId>
@@ -152,7 +155,7 @@
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-gowalla</artifactId>
-			<version>${org.springframework.social.version}</version>
+			<version>${org.springframework.social.gowalla.version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>spring-social-web</artifactId>
@@ -177,7 +180,7 @@
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-github</artifactId>
-			<version>${org.springframework.social.version}</version>
+			<version>${org.springframework.social.github.version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>spring-social-web</artifactId>
