--- a/spring-android-rest-template-test/AndroidManifest.xml
+++ b/spring-android-rest-template-test/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="org.springframework.android.auth.test"
+      package="org.springframework.android.rest.test"
       android:versionCode="1"
       android:versionName="1.0">
       
     <uses-sdk android:minSdkVersion="7" />
     
     <instrumentation 
-    	android:targetPackage="org.springframework.android.auth.test" 
+    	android:targetPackage="org.springframework.android.rest.test" 
     	android:name="android.test.InstrumentationTestRunner" />
     	
     <application 
