--- a/spring-android-auth-test/pom.xml
+++ b/spring-android-auth-test/pom.xml
@@ -46,6 +46,12 @@
 			<groupId>org.springframework.android</groupId>
 			<artifactId>spring-android-auth</artifactId>
 			<version>${org.springframework.android.version}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>spring-core</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.social</groupId>
