--- a/spring-android-auth-test/pom.xml
+++ b/spring-android-auth-test/pom.xml
@@ -22,8 +22,8 @@
 		<java-version>1.6</java-version>
 		<com.google.android.version>2.1_r1</com.google.android.version>
 		<!-- Available Android versions: 1.5_r3, 1.5_r4, 1.6_r2, 2.1.2, 2.1_r1, 2.2.1, 2.3.1, 2.3.3 -->
-		<org.springframework.android.version>1.0.0.BUILD-SNAPSHOT</org.springframework.android.version>
-		<org.springframework.social.version>1.0.0.RC1</org.springframework.social.version>
+		<org.springframework.android.version>1.0.0.M4</org.springframework.android.version>
+		<org.springframework.social.version>1.0.0.BUILD-SNAPSHOT</org.springframework.social.version>
 		<org.springframework.social.linkedin.version>1.0.0.BUILD-SNAPSHOT</org.springframework.social.linkedin.version>
 		<org.springframework.social.gowalla.version>1.0.0.BUILD-SNAPSHOT</org.springframework.social.gowalla.version>
 		<org.springframework.social.github.version>1.0.0.BUILD-SNAPSHOT</org.springframework.social.github.version>
@@ -41,6 +41,11 @@
 			<artifactId>android-test</artifactId>
 			<version>${com.google.android.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+			<version>2.5.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.android</groupId>
