--- a/spring-android-auth-test/pom.xml
+++ b/spring-android-auth-test/pom.xml
@@ -20,38 +20,46 @@
 		<maven-compiler-plugin-version>2.3.2</maven-compiler-plugin-version>
 		<maven-eclipse-plugin-version>2.8</maven-eclipse-plugin-version>
 		<java-version>1.6</java-version>
-		<com.google.android.version>2.1_r1</com.google.android.version>
+		<android-version>2.1_r1</android-version>
 		<!-- Available Android versions: 1.5_r3, 1.5_r4, 1.6_r2, 2.1.2, 2.1_r1, 2.2.1, 2.3.1, 2.3.3 -->
-		<org.springframework.android.version>1.0.0.M4</org.springframework.android.version>
-		<org.springframework.social.version>1.0.0.BUILD-SNAPSHOT</org.springframework.social.version>
-		<org.springframework.social.linkedin.version>1.0.0.BUILD-SNAPSHOT</org.springframework.social.linkedin.version>
-		<org.springframework.social.gowalla.version>1.0.0.BUILD-SNAPSHOT</org.springframework.social.gowalla.version>
-		<org.springframework.social.github.version>1.0.0.BUILD-SNAPSHOT</org.springframework.social.github.version>
+		<easymock.version>2.5.2</easymock.version>
+		<spring-android-version>1.0.0.M4</spring-android-version>
+		<spring-security-version>3.1.0.RC2.crypto</spring-security-version>
+		<spring-social-version>1.0.0.BUILD-SNAPSHOT</spring-social-version>
+		<spring-social-linkedin-version>1.0.0.BUILD-SNAPSHOT</spring-social-linkedin-version>
+		<spring-social-gowall-version>1.0.0.BUILD-SNAPSHOT</spring-social-gowall-version>
+		<spring-social-github-version>1.0.0.BUILD-SNAPSHOT</spring-social-github-version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.google.android</groupId>
 			<artifactId>android</artifactId>
-			<version>${com.google.android.version}</version>
+			<version>${android-version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.google.android</groupId>
 			<artifactId>android-test</artifactId>
-			<version>${com.google.android.version}</version>
+			<version>${android-version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.easymock</groupId>
 			<artifactId>easymock</artifactId>
-			<version>2.5.2</version>
+			<version>${easymock.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.android</groupId>
 			<artifactId>spring-android-auth</artifactId>
-			<version>${org.springframework.android.version}</version>
+			<version>${spring-android-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+			<version>${spring-security-version}</version>
 			<exclusions>
+				<!-- exclude in favor of spring-android-core -->
 				<exclusion>
 					<artifactId>spring-core</artifactId>
 					<groupId>org.springframework</groupId>
@@ -61,15 +69,15 @@
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-core</artifactId>
-			<version>${org.springframework.social.version}</version>
+			<version>${spring-social-version}</version>
 			<exclusions>
-				<exclusion>
-					<!-- exclude in favor of spring-android-rest-template -->
+				<!-- exclude in favor of spring-android-rest-template -->
+				<exclusion>					
 					<artifactId>spring-web</artifactId>
 					<groupId>org.springframework</groupId>
 				</exclusion>
+				<!-- Commons Logging is provided by Android -->
 				<exclusion>
-					<!-- Commons Logging is provided by Android -->
 					<artifactId>commons-logging</artifactId>
 					<groupId>commons-logging</groupId>
 				</exclusion>
@@ -78,15 +86,15 @@
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-test</artifactId>
-			<version>${org.springframework.social.version}</version>
+			<version>${spring-social-version}</version>
 			<exclusions>
+				<!-- exclude in favor of spring-android-rest-template -->
 				<exclusion>
-					<!-- exclude in favor of spring-android-rest-template -->
 					<artifactId>spring-web</artifactId>
 					<groupId>org.springframework</groupId>
 				</exclusion>
+				<!-- Commons Logging is provided by Android -->
 				<exclusion>
-					<!-- Commons Logging is provided by Android -->
 					<artifactId>commons-logging</artifactId>
 					<groupId>commons-logging</groupId>
 				</exclusion>
@@ -95,19 +103,10 @@
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-twitter</artifactId>
-			<version>${org.springframework.social.version}</version>
+			<version>${spring-social-version}</version>
 			<exclusions>
+				<!-- Commons Logging is provided by Android -->
 				<exclusion>
-					<artifactId>spring-social-web</artifactId>
-					<groupId>org.springframework.social</groupId>
-				</exclusion>
-				<exclusion>
-					<!-- exclude in favor of spring-android-rest-template -->
-					<artifactId>spring-web</artifactId>
-					<groupId>org.springframework</groupId>
-				</exclusion>
-				<exclusion>
-					<!-- Commons Logging is provided by Android -->
 					<artifactId>commons-logging</artifactId>
 					<groupId>commons-logging</groupId>
 				</exclusion>
@@ -116,23 +115,10 @@
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-facebook</artifactId>
-			<version>${org.springframework.social.version}</version>
+			<version>${spring-social-version}</version>
 			<exclusions>
+				<!-- Commons Logging is provided by Android -->
 				<exclusion>
-					<artifactId>spring-social-web</artifactId>
-					<groupId>org.springframework.social</groupId>
-				</exclusion>
-				<exclusion>
-					<!-- exclude in favor of spring-android-rest-template -->
-					<artifactId>spring-web</artifactId>
-					<groupId>org.springframework</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>spring-webmvc</artifactId>
-					<groupId>org.springframework</groupId>
-				</exclusion>
-				<exclusion>
-					<!-- Commons Logging is provided by Android -->
 					<artifactId>commons-logging</artifactId>
 					<groupId>commons-logging</groupId>
 				</exclusion>
@@ -141,23 +127,10 @@
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-linkedin</artifactId>
-			<version>${org.springframework.social.linkedin.version}</version>
+			<version>${spring-social-linkedin-version}</version>
 			<exclusions>
+				<!-- Commons Logging is provided by Android -->
 				<exclusion>
-					<artifactId>spring-social-web</artifactId>
-					<groupId>org.springframework.social</groupId>
-				</exclusion>
-				<exclusion>
-					<!-- exclude in favor of spring-android-rest-template -->
-					<artifactId>spring-web</artifactId>
-					<groupId>org.springframework</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>spring-webmvc</artifactId>
-					<groupId>org.springframework</groupId>
-				</exclusion>
-				<exclusion>
-					<!-- Commons Logging is provided by Android -->
 					<artifactId>commons-logging</artifactId>
 					<groupId>commons-logging</groupId>
 				</exclusion>
@@ -166,23 +139,10 @@
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-gowalla</artifactId>
-			<version>${org.springframework.social.gowalla.version}</version>
+			<version>${spring-social-gowall-version}</version>
 			<exclusions>
+				<!-- Commons Logging is provided by Android -->
 				<exclusion>
-					<artifactId>spring-social-web</artifactId>
-					<groupId>org.springframework.social</groupId>
-				</exclusion>
-				<exclusion>
-					<!-- exclude in favor of spring-android-rest-template -->
-					<artifactId>spring-web</artifactId>
-					<groupId>org.springframework</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>spring-webmvc</artifactId>
-					<groupId>org.springframework</groupId>
-				</exclusion>
-				<exclusion>
-					<!-- Commons Logging is provided by Android -->
 					<artifactId>commons-logging</artifactId>
 					<groupId>commons-logging</groupId>
 				</exclusion>
@@ -191,23 +151,10 @@
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-github</artifactId>
-			<version>${org.springframework.social.github.version}</version>
+			<version>${spring-social-github-version}</version>
 			<exclusions>
+				<!-- Commons Logging is provided by Android -->
 				<exclusion>
-					<artifactId>spring-social-web</artifactId>
-					<groupId>org.springframework.social</groupId>
-				</exclusion>
-				<exclusion>
-					<!-- exclude in favor of spring-android-rest-template -->
-					<artifactId>spring-web</artifactId>
-					<groupId>org.springframework</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>spring-webmvc</artifactId>
-					<groupId>org.springframework</groupId>
-				</exclusion>
-				<exclusion>
-					<!-- Commons Logging is provided by Android -->
 					<artifactId>commons-logging</artifactId>
 					<groupId>commons-logging</groupId>
 				</exclusion>
