--- a/build.gradle
+++ b/build.gradle
@@ -99,13 +99,13 @@ configure(javaprojects) {
     junitVersion = '4.7'
     log4jVersion = '1.2.16'
     springVersion = '3.1.0.M2'
-    springSocialVersion = '1.0.0.RC2'
-    springSecurityVersion = '3.1.0.RC2.crypto'
+    springSocialVersion = '1.0.0.RELEASE'
+    springSecurityVersion = '3.1.0.RC3'
     androidVersion = '2.1_r1'
     commonsHttpclientVersion = '3.1'
-    jacksonVersion = '1.8.4'
+    jacksonVersion = '1.8.5'
 	gsonVersion = '1.7.1'
-    simpleXmlVersion = '2.6'
+    simpleXmlVersion = '2.6.1'
     androidRomeVersion = '1.0.0-r2'
     javaxServletApiVersion = '2.5'
     commonsFileuploadVersion = '1.2'
