--- a/spring-android-auth-test/pom.xml
+++ b/spring-android-auth-test/pom.xml
@@ -15,10 +15,8 @@
 
 	<properties>
 		<android-platform>7</android-platform>
-		<android-emulator>7</android-emulator>
-		<maven-android-plugin-version>2.8.4</maven-android-plugin-version>
+		<android-maven-plugin-version>3.0.0-alpha-13</android-maven-plugin-version>
 		<maven-compiler-plugin-version>2.3.2</maven-compiler-plugin-version>
-		<maven-eclipse-plugin-version>2.8</maven-eclipse-plugin-version>
 		<java-version>1.6</java-version>
 		<android-version>2.1_r1</android-version>
 		<!-- Available Android versions: 1.5_r3, 1.5_r4, 1.6_r2, 2.1.2, 2.1_r1, 2.2.1, 2.3.1, 2.3.3 -->
@@ -168,20 +166,15 @@
 		<plugins>
 			<plugin>
 				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
-				<artifactId>maven-android-plugin</artifactId>
-				<version>${maven-android-plugin-version}</version>
+				<artifactId>android-maven-plugin</artifactId>
+				<version>${android-maven-plugin-version}</version>
 				<configuration>
 					<sdk>
 						<platform>${android-platform}</platform>
 					</sdk>
-					<!-- <emulator> <avd>${android-emulator}</avd> <wait>60000</wait> </emulator> -->
 					<deleteConflictingFiles>true</deleteConflictingFiles>
 					<undeployBeforeDeploy>true</undeployBeforeDeploy>
 				</configuration>
-				<!-- <executions> <execution> <id>startemulator</id> <phase>initialize</phase> 
-					<goals> <goal>emulator-start</goal> </goals> </execution> <execution> <id>stopemulator</id> 
-					<phase>install</phase> <goals> <goal>emulator-stop</goal> </goals> </execution> 
-					</executions> -->
 				<extensions>true</extensions>
 			</plugin>
 			<plugin>
@@ -191,11 +184,6 @@
 					<source>${java-version}</source>
 					<target>${java-version}</target>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>${maven-eclipse-plugin-version}</version>
 			</plugin>
 		</plugins>
 	</build>
