--- a/spring-android-rest-template-test/pom.xml
+++ b/spring-android-rest-template-test/pom.xml
@@ -15,51 +15,51 @@
 
 	<properties>
 		<android-platform>7</android-platform>
-		<android-emulator>7</android-emulator>
-		<maven-android-plugin-version>2.8.4</maven-android-plugin-version>
+		<android-maven-plugin-version>3.0.0-alpha-13</android-maven-plugin-version>
 		<maven-compiler-plugin-version>2.3.2</maven-compiler-plugin-version>
 		<java-version>1.6</java-version>
-		<com.google.android.version>2.1_r1</com.google.android.version>
+		<android-version>2.1_r1</android-version>
 		<!-- Available Android versions: 1.5_r3, 1.5_r4, 1.6_r2, 2.1.2, 2.1_r1, 2.2.1, 2.3.1, 2.3.3 -->
-		<org.springframework.android.version>1.0.0.BUILD-SNAPSHOT</org.springframework.android.version>
-		<com.google.code.gson.version>1.7.1</com.google.code.gson.version>
-		<org.codehaus.jackson.version>1.8.5</org.codehaus.jackson.version>
-		<org.simpleframework.version>2.6.1</org.simpleframework.version>
-		<com.google.code.android-rome-feed-reader.version>1.0.0-r2</com.google.code.android-rome-feed-reader.version>
+		<spring-android-version>1.0.0.BUILD-SNAPSHOT</spring-android-version>
+		<gson-version>1.7.2</gson-version>
+		<jackson-version>1.9.2</jackson-version>
+		<simple-version>2.6.2</simple-version>
+		<android-rome-feed-reader-version>1.0.0-r2</android-rome-feed-reader-version>
+        <easymock-version>2.5.2</easymock-version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.google.android</groupId>
 			<artifactId>android</artifactId>
-			<version>${com.google.android.version}</version>
+			<version>${android-version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.google.android</groupId>
 			<artifactId>android-test</artifactId>
-			<version>${com.google.android.version}</version>
+			<version>${android-version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.android</groupId>
 			<artifactId>spring-android-rest-template</artifactId>
-			<version>${org.springframework.android.version}</version>
+			<version>${spring-android-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
-			<version>${org.codehaus.jackson.version}</version>
+			<version>${jackson-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>${com.google.code.gson.version}</version>
+			<version>${gson-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleframework</groupId>
 			<artifactId>simple-xml</artifactId>
-			<version>${org.simpleframework.version}</version>
+			<version>${simple-version}</version>
 			<exclusions>
 				<!-- StAX is not available on Android -->
 				<exclusion>
@@ -80,13 +80,13 @@
 		<dependency>
 			<groupId>com.google.code.android-rome-feed-reader</groupId>
 			<artifactId>android-rome-feed-reader</artifactId>
-			<version>${com.google.code.android-rome-feed-reader.version}</version>
+			<version>${android-rome-feed-reader-version}</version>
 		</dependency>
 		<dependency>
 			<!-- easymock 3.x does NOT work on Android -->
 			<groupId>org.easymock</groupId>
 			<artifactId>easymock</artifactId>
-			<version>2.5.2</version>
+			<version>${easymock-version}</version>
 		</dependency>
 	</dependencies>
 
@@ -96,8 +96,8 @@
 		<plugins>
 			<plugin>
 				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
-				<artifactId>maven-android-plugin</artifactId>
-				<version>${maven-android-plugin-version}</version>
+				<artifactId>android-maven-plugin</artifactId>
+				<version>${android-maven-plugin-version}</version>
 				<configuration>
 					<sdk>
 						<platform>${android-platform}</platform>
