--- a/build.gradle
+++ b/build.gradle
@@ -98,14 +98,14 @@ configure(javaprojects) {
 
     junitVersion = '4.7'
     log4jVersion = '1.2.16'
-    springVersion = '3.1.0.M2'
+    springVersion = '3.1.0.RC1'
     springSocialVersion = '1.0.0.RELEASE'
     springSecurityVersion = '3.1.0.RC3'
     androidVersion = '2.1_r1'
     commonsHttpclientVersion = '3.1'
-    jacksonVersion = '1.8.5'
-	gsonVersion = '1.7.1'
-    simpleXmlVersion = '2.6.1'
+    jacksonVersion = '1.9.2'
+	gsonVersion = '1.7.2'
+    simpleXmlVersion = '2.6.2'
     androidRomeVersion = '1.0.0-r2'
     javaxServletApiVersion = '2.5'
     commonsFileuploadVersion = '1.2'
