ANDROID-62 Added AssetResource for utilizing raw files stored in the Android assets directory

--- a/build.gradle
+++ b/build.gradle
@@ -134,6 +134,12 @@ configure(javaprojects) {
 // -----------------------------------------------------------------------------
 project('spring-android-core') {
     description = "Spring Android Core"
+
+    dependencies {
+        compile ("com.google.android:android:$androidVersion") { 
+            provided = true 
+        }
+    }
 }
 
 project('spring-android-auth') {
