--- a/build.gradle
+++ b/build.gradle
@@ -100,7 +100,7 @@ configure(javaprojects) {
     log4jVersion = '1.2.16'
     springVersion = '3.1.0.RC1'
     springSocialVersion = '1.0.0.RELEASE'
-    springSecurityVersion = '3.1.0.RC3'
+    springSecurityVersion = '3.1.0.RELEASE'
     androidVersion = '2.1_r1'
     commonsHttpclientVersion = '3.1'
     jacksonVersion = '1.9.2'
