--- a/build.gradle
+++ b/build.gradle
@@ -101,7 +101,7 @@ configure(javaprojects) {
     springVersion = '3.1.0.RELEASE'
     springSocialVersion = '1.0.0.RELEASE'
     springSecurityVersion = '3.1.0.RELEASE'
-    androidVersion = '2.1_r1'
+    androidVersion = '4.0.1.2'
     commonsHttpclientVersion = '3.1'
     jacksonVersion = '1.9.2'
 	gsonVersion = '2.0'
