--- a/spring-android-rest-template-test/proguard.cfg
+++ b/spring-android-rest-template-test/proguard.cfg
@@ -34,3 +34,7 @@
 -keep class * implements android.os.Parcelable {
   public static final android.os.Parcelable$Creator *;
 }
+
+-keepclassmembers public class org.springframework {
+    public *;
+}
