--- a/spring-android-auth-test/AndroidManifest.xml
+++ b/spring-android-auth-test/AndroidManifest.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="org.springframework.android.auth.test"
-      android:versionCode="1"
-      android:versionName="1.0">
-      
+    package="org.springframework.android.auth.test"
+    android:versionCode="1"
+    android:versionName="1.0" >
+
     <uses-sdk android:minSdkVersion="7" />
-    
-    <instrumentation 
-    	android:targetPackage="org.springframework.android.auth.test" 
-    	android:name="android.test.InstrumentationTestRunner" />
-    	
-    <application 
-    	android:icon="@drawable/icon" 
-    	android:label="@string/app_name">
 
-		<uses-library android:name="android.test.runner" />
+    <instrumentation
+        android:name="android.test.InstrumentationTestRunner"
+        android:targetPackage="org.springframework.android.auth.test" />
 
+    <application
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
+        <uses-library android:name="android.test.runner" />
     </application>
+
 </manifest>
