--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
 		<java-version>1.6</java-version>
 		<android-version>4.0.1.2</android-version>
 		<!-- Available Android versions: 1.5_r3, 1.5_r4, 1.6_r2, 2.1.2, 2.1_r1, 2.2.1, 2.3.1, 2.3.3, 4.0.1.2 -->
-		<spring-android-version>1.0.0.BUILD-SNAPSHOT</spring-android-version>
-		<easymock-version>2.5.2</easymock-version>
+		<org.springframework.android-version>1.0.0.BUILD-SNAPSHOT</org.springframework.android-version>
+		<org.easymock-version>2.5.2</org.easymock-version>
 	</properties>
 	
 	<dependencies>
@@ -47,7 +47,7 @@
 			<!-- easymock 3.x does NOT work on Android -->
 			<groupId>org.easymock</groupId>
 			<artifactId>easymock</artifactId>
-			<version>${easymock-version}</version>
+			<version>${org.easymock-version}</version>
 		</dependency>
 	</dependencies>
 
