--- a/spring-android-core-test/pom.xml
+++ b/spring-android-core-test/pom.xml
@@ -1,13 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.springframework.android</groupId>
 		<artifactId>spring-android-test</artifactId>
 		<version>1.0.0.BUILD-SNAPSHOT</version>
 	</parent>
-
-	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>spring-android-core-test</artifactId>
 	<packaging>apk</packaging>
@@ -17,7 +16,7 @@
 		<dependency>
 			<groupId>org.springframework.android</groupId>
 			<artifactId>spring-android-core</artifactId>
-			<version>${spring-android-version}</version>
+			<version>${org.springframework.android-version}</version>
 		</dependency>
 	</dependencies>
 
