updated repos in test projects

--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 		<repository>
 			<id>springsource-snapshot</id>
 			<name>SpringSource Snapshot Repository</name>
-			<url>http://repo.springframework.org/snapshot</url>
+			<url>http://repo.springsource.org/snapshot</url>
 			<releases>
 				<enabled>false</enabled>
 			</releases>
@@ -69,16 +69,19 @@
 		<repository>
 			<id>springsource-milestone</id>
 			<name>SpringSource Milestone Repository</name>
-			<url>http://repo.springframework.org/milestone</url>
+			<url>http://repo.springsource.org/milestone</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
 		<!-- For developing against latest Spring releases -->
 		<repository>
-			<id>springsource-repository</id>
+			<id>springsource-repo</id>
 			<name>SpringSource Repository</name>
-			<url>http://repo.springframework.org/release</url>
+			<url>http://repo.springsource.org/release</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
 		</repository>
 	</repositories>
 
